@@ -45,13 +45,13 @@ HfstAnalyzer::HfstAnalyzer(const string & directoryName) throw(setup::Dictionary
 		throw setup::DictionaryException("Failed to open mor.hwfst");
 	}
 }
-    
+	
 list<Analysis *> * HfstAnalyzer::analyze(const wchar_t * word) {
 	return analyze(word, wcslen(word));
 }
 
 list<Analysis *> * HfstAnalyzer::analyze(const wchar_t * word,
-                                         size_t wlen) {
+										 size_t wlen) {
 	if (wlen > LIBVOIKKO_MAX_WORD_CHARS) {
 		return new list<Analysis *>();
 	}
@@ -71,12 +71,20 @@ list<Analysis *> * HfstAnalyzer::analyze(const char * word) {
 	HWFST::KeyVectorVector * analysisVector = HWFST::lookup_all(morphology, wordPath, &flags);
 	int currentAnalysisCount = 0;
 	for (HWFST::KeyVectorVector::iterator analysisIt = analysisVector->begin();
-	     analysisIt != analysisVector->end() && currentAnalysisCount < LIBVOIKKO_MAX_ANALYSIS_COUNT;
-	     ++analysisIt) {
+		 analysisIt != analysisVector->end() && currentAnalysisCount < LIBVOIKKO_MAX_ANALYSIS_COUNT;
+		 ++analysisIt) {
 		HWFST::KeyVector * analysis = *analysisIt;
 		KeyVector* filtlkv = flagTable.filter_diacritics(analysis);
 		if (filtlkv) {
-			addAnalysis(filtlkv, analysisList, wlen);
+			KeyVector noFlags;
+			for (KeyVector::const_iterator k = filtlkv->begin();
+				 k != filtlkv->end();
+				 ++k) {
+				if ((*k != 0) && (flags.find(*k) == flags.end())) {
+					noFlags.push_back(*k);
+				}
+			}
+			addAnalysis(&noFlags, analysisList, wlen);
 			++currentAnalysisCount;
 			delete filtlkv;
 		}
@@ -89,8 +97,30 @@ list<Analysis *> * HfstAnalyzer::analyze(const char * word) {
 void HfstAnalyzer::addAnalysis(HWFST::KeyVector * hfstAnalysis, list<Analysis *> * analysisList, size_t charCount) const {
 	Analysis * analysis = new Analysis();
 	string * analysisString = HWFST::keyVectorToString(hfstAnalysis, keyTable);
-	// TODO: do something with the analysis
+	map<string,string> analyses;
+	// let's walk the analysis string ltr, most useful stuff is at the end!
+	size_t tagStart = analysisString->rfind("[");
+	while (tagStart != analysisString->npos) {
+		assert(tagStart + 1 != analysisString->npos);
+		size_t eqSign = analysisString->find("=", tagStart + 1);
+		size_t tagEnd = analysisString->find("]", tagStart + 1);
+		assert(eqSign != analysisString->npos);
+		assert(tagEnd != analysisString->npos);
+		string name = analysisString->substr(tagStart + 1, eqSign - tagStart - 1);
+		string value = analysisString->substr(eqSign + 1, tagEnd - eqSign - 1);
+		while (analyses.find(name) != analyses.end()) {
+			name += "_";
+		}
+		analyses[name] = value;
+		if (tagStart == 0) {
+			break;
+		}
+		else {
+			tagStart = analysisString->rfind("[", tagStart - 1);
+		}
+	}
 	delete analysisString;
+	// this structure is some voikko/malaga internal?
 	wchar_t * structure = new wchar_t[charCount + 2];
 	structure[0] = L'=';
 	for (size_t i = 1; i < charCount + 1; i++) {
@@ -98,15 +128,27 @@ void HfstAnalyzer::addAnalysis(HWFST::KeyVector * hfstAnalysis, list<Analysis *>
 	}
 	structure[charCount + 1] = L'\0';
 	analysis->addAttribute("STRUCTURE", structure);
-	analysis->addAttribute("CLASS", utils::StringUtils::copy(L"none"));
-	analysis->addAttribute("SIJAMUOTO", utils::StringUtils::copy(L"none"));
+	if (analyses.find("POS") != analyses.end()) {
+		analysis->addAttribute("CLASS", 
+							   utils::StringUtils::ucs4FromUtf8(analyses["POS"].c_str()));
+	}
+	else {
+		analysis->addAttribute("CLASS", utils::StringUtils::copy(L"none"));
+	}
+	if (analyses.find("CASE") != analyses.end()) {
+		analysis->addAttribute("SIJAMUOTO", 
+							   utils::StringUtils::ucs4FromUtf8(analyses["CASE"].c_str()));
+	}
+	else {
+		analysis->addAttribute("SIJAMUOTO", utils::StringUtils::copy(L"none"));
+	}
 	analysisList->push_back(analysis);
 }
 
 void HfstAnalyzer::terminate() {
 	delete keyTable;
 	keyTable = 0;
-	delete morphology; // FIXME: leaks memory
+	HWFST::delete_transducer(morphology);
 	morphology = 0;
 }
 
